feat: harden enterprise PR review agent
Add bounded specialist review rounds, adversarial verification, secure webhook handling, shared replay protection, hardened CI and deployment controls, and enterprise governance documentation.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>